tests/integration/errors/test_interceptor_wrong_first_param.sn
# Error test: interceptor handler with wrong first parameter type

fn badHandler(name: int, args: any[], continue_fn: fn(): any): any =>
    return continue_fn()

fn main(): void =>
    Interceptor.register(badHandler)
